monitoring-stack/httproute.yaml
# httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmsingle
  namespace: monitoring
spec:
  parentRefs:
    - name: eg
      namespace: default
      sectionName: https
  hostnames:
    - metrics.kube.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vmsingle
          port: 8428
